--- a/app/views/invite/index.html.erb
+++ b/app/views/invite/index.html.erb
@@ -54,7 +54,7 @@
     <% if @imprint_url %>
       <%= link_to t(:imprint), @imprint_url, target: "_blank" %> |
     <% end %>
-    Powered by <a href="https://fastlane.tools" target="_blank">fastlane</a>
+    <!-- Powered by <a href="https://fastlane.tools" target="_blank">fastlane</a> -->
   </p>
 </div>
 
